# SDF2D

./: CMakeLists.txt  README.md
SDF2D_repo/app/: CMakeLists.txt
site/: index.html  styles.css
src/: AppWindow.cpp  AppWindow.h  Canvas.cpp  Canvas.h  DockLayers.cpp  DockLayers.h  DockProperties.cpp  DockProperties.h  DockTimeline.cpp  DockTimeline.h  Document.cpp  Document.h  main.cpp
src/io/: Sdf2dFile.cpp  Sdf2dFile.h
src/ml/: MLService.cpp
